<resources>
    <string name="app_name">BudgetManager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="edit_budget">Edit Budget</string>
    <string name="view_spare_entries">View Spare Entries</string>
    <string name="name">Name</string>
    <string name="new_budget">New Budget</string>
    <string name="save_ok">Save Ok</string>
    <string name="name_required">Please enter a name</string>
    <string name="snack_delete_success">Item was removed from the list.</string>
    <string name="goal">Goal</string>
    <string name="invalid_number">Invalid number</string>
    <string name="edit_repartition">Edit part repartition</string>
    <string name="amount">Amount</string>
    <string name="comment">Comment</string>
    <string name="entry_entry">Enter Entry</string>
    <string name="not_associated">Not associated</string>
    <string name="delete">Delete</string>
    <string name="item_removed">Item was removed from the list.</string>
    <string name="undo">UNDO</string>
</resources>
