<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item android:icon="@drawable/ic_outline_pie_chart_24"
        android:id="@+id/menu_donut"
        android:title="@string/edit_repartition"
        app:showAsAction="ifRoom"/>

    <item android:icon="@drawable/ic_baseline_euro_24"
        android:id="@+id/menu_edit"
        android:title="@string/edit_budget"
        app:showAsAction="ifRoom"/>

    <item android:icon="@drawable/ic_baseline_local_atm_24"
        android:id="@+id/menu_spare_entries"
        android:title="@string/view_spare_entries"
        app:showAsAction="ifRoom"/>
</menu>